--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ var items = [
     {id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
     {id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
     {id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
-    {id: 'rammus', name: 'Rammus', image: 'iconos/Rammus.jpg'},
+    {id: 'rammus', name: 'Rammus', image: 'iconos/rammus.jpg'},
     {id: 'renekton', name: 'Renekton', image: 'iconos/renekton.jpg'},
     {id: 'rengar', name: 'Rengar', image: 'iconos/rengar.png'},
     {id: 'riven', name: 'Riven', image: 'iconos/riven.jpg'},
