--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ var items = [
     {id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
     {id: 'amumu', name: 'Amumu', image: 'iconos/amumu.jpg'},
     {id: 'annie', name: 'Annie', image: 'iconos/annie.jpg'},
-    {id: 'ashe', name: 'Ashe', image: 'iconos/ashe.jpg},
+    {id: 'ashe', name: 'Ashe', image: 'iconos/ashe.jpg'},
     {id: 'aurelion_sol', name: 'Aurelion Sol', image: 'iconos/aurelion_sol.jpg'},
     {id: 'blitzcrank', name: 'Blitzcrank', image: 'iconos/blitzcrank.jpg'},
     {id: 'brand', name: 'Brand', image: 'iconos/brand.jpg'},
