--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@ button.disabled:hover {
 
 var items = [
     // Define your items here
-    {id: 'ahri', name: 'Ahri', image: 'iconos/ahri.jpg'},
+    {id: 'aatrox', name: 'Aatrox', image: 'iconos/aatrox.jpg'},
+    {id: 'lillia', name: 'Lillia', image: 'iconos/lillia.jpg'},
+    {id: 'kayn', name: 'Kayn', image: 'iconos/kayn.jpg'},
     {id: 'akali', name: 'Akali', image: 'iconos/akali.jpg'},
     {id: 'akshan', name: 'Akshan', image: 'iconos/akshan.jpg'},
     {id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
