--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0">
-<title>Picker</title>
+<title>LoL:WR Fav Picker</title>
 <style>
 body {
     background:#FFF;
@@ -206,7 +206,7 @@ button.disabled:hover {
 </style>
 </head>
 <body>
-<h1>Picker</h1>
+<h1>Los mejores de la grieta</h1>
 
 <p>You can include any content you want here.</p>
 
@@ -334,7 +334,7 @@ var items = [
 
 var myPicker = new picker.Picker({
     items: items,
-    localStorageKey: 'picker-state'
+    localStorageKey: 'wr-picker-state'
 });
 
 var pickerUI = new PickerUI(myPicker, {
