--- a/index.html
+++ b/index.html
@@ -235,99 +235,99 @@ button.disabled:hover {
 
 var items = [
     // Define your items here
-    {id: 'aatrox', name: 'Aatrox', image: 'iconos/aatrox.jpg'},
-    {id: 'lillia', name: 'Lillia', image: 'iconos/lillia.jpg'},
-    {id: 'kayn', name: 'Kayn', image: 'iconos/kayn.jpg'},
+    //{id: 'aatrox', name: 'Aatrox', image: 'iconos/aatrox.jpg'},
+    //{id: 'lillia', name: 'Lillia', image: 'iconos/lillia.jpg'},
+    //{id: 'kayn', name: 'Kayn', image: 'iconos/kayn.jpg'},
     {id: 'akali', name: 'Akali', image: 'iconos/akali.jpg'},
     {id: 'akshan', name: 'Akshan', image: 'iconos/akshan.jpg'},
     {id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
-    {id: 'amumu', name: 'Amumu', image: 'iconos/amumu.jpg'},
-    {id: 'annie', name: 'Annie', image: 'iconos/annie.jpg'},
-    {id: 'ashe', name: 'Ashe', image: 'iconos/ashe.jpg'},
+    //{id: 'amumu', name: 'Amumu', image: 'iconos/amumu.jpg'},
+    //{id: 'annie', name: 'Annie', image: 'iconos/annie.jpg'},
+    //{id: 'ashe', name: 'Ashe', image: 'iconos/ashe.jpg'},
     {id: 'aurelion_sol', name: 'Aurelion Sol', image: 'iconos/aurelion_sol.jpg'},
-    {id: 'blitzcrank', name: 'Blitzcrank', image: 'iconos/blitzcrank.jpg'},
+    //{id: 'blitzcrank', name: 'Blitzcrank', image: 'iconos/blitzcrank.jpg'},
     {id: 'brand', name: 'Brand', image: 'iconos/brand.jpg'},
-    {id: 'braum', name: 'Braum', image: 'iconos/braum.jpg'},
-    {id: 'caitlyn', name: 'Caitlyn', image: 'iconos/caitlyn.jpg'},
+    //{id: 'braum', name: 'Braum', image: 'iconos/braum.jpg'},
+    //{id: 'caitlyn', name: 'Caitlyn', image: 'iconos/caitlyn.jpg'},
     {id: 'camille', name: 'Camille', image: 'iconos/camille.jpg'},
     {id: 'corki', name: 'Corki', image: 'iconos/corki.jpg'},
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
-    {id: 'diana', name: 'Diana', image: 'iconos/diana.jpg'},
+    //{id: 'diana', name: 'Diana', image: 'iconos/diana.jpg'},
     {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
     {id: 'draven', name: 'Draven', image: 'iconos/draven.jpg'},
-    {id: 'ekko', name: 'Ekko', image: 'iconos/ekko.jpg'},
-    {id: 'evelynn', name: 'Evelynn', image: 'iconos/evelynn.jpg'},
-    {id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
+    //{id: 'ekko', name: 'Ekko', image: 'iconos/ekko.jpg'},
+    //{id: 'evelynn', name: 'Evelynn', image: 'iconos/evelynn.jpg'},
+    //{id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
     {id: 'fiora', name: 'Fiora', image: 'iconos/fiora.jpg'},
     {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
     {id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
-    {id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
+    //{id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
     {id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
     {id: 'graves', name: 'Graves', image: 'iconos/graves.jpg'},
-    {id: 'gwen', name: 'Gwen', image: 'iconos/gwen.jpg'},
-    {id: 'irelia', name: 'Irelia', image: 'iconos/irelia.jpg'},
-    {id: 'janna', name: 'Janna', image: 'iconos/janna.jpg'},
+    //{id: 'gwen', name: 'Gwen', image: 'iconos/gwen.jpg'},
+    //{id: 'irelia', name: 'Irelia', image: 'iconos/irelia.jpg'},
+    //{id: 'janna', name: 'Janna', image: 'iconos/janna.jpg'},
     {id: 'jarvaniv', name: 'Jarvan IV', image: 'iconos/jarvaniv.jpg'},
-    {id: 'jax', name: 'Jax', image: 'iconos/jax.jpg'},
-    {id: 'jayce', name: 'Jayce', image: 'iconos/jayce.jpg'},
-    {id: 'jhin', name: 'Jhin', image: 'iconos/jhin.jpg'},
-    {id: 'jinx', name: 'Jinx', image: 'iconos/jinx.jpg'},
-    {id: 'kaisa', name: 'Kai\'sa', image: 'iconos/kaisa.jpg'},
-    {id: 'karma', name: 'Karma', image: 'iconos/karma.jpg'},
+    //{id: 'jax', name: 'Jax', image: 'iconos/jax.jpg'},
+    //{id: 'jayce', name: 'Jayce', image: 'iconos/jayce.jpg'},
+    //{id: 'jhin', name: 'Jhin', image: 'iconos/jhin.jpg'},
+    //{id: 'jinx', name: 'Jinx', image: 'iconos/jinx.jpg'},
+    //{id: 'kaisa', name: 'Kai\'sa', image: 'iconos/kaisa.jpg'},
+    //{id: 'karma', name: 'Karma', image: 'iconos/karma.jpg'},
     {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
     {id: 'katarina', name: 'Katarina', image: 'iconos/katarina.jpg'},
-    {id: 'kayle', name: 'Kayle', image: 'iconos/kayle.jpg'},
+    //{id: 'kayle', name: 'Kayle', image: 'iconos/kayle.jpg'},
     {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
     {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
     {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
-    {id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
+    //{id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
     {id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
-    {id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
-    {id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
+    //{id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
+    //{id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
-    {id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
+    //{id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
     {id: 'missfortune', name: 'Miss Fortune', image: 'iconos/missfortune.jpg'},
-    {id: 'morgana', name: 'Morgana', image: 'iconos/morgana.jpg'},
-    {id: 'nami', name: 'Nami', image: 'iconos/nami.jpg'},
-    {id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
-    {id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
-    {id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
+    //{id: 'morgana', name: 'Morgana', image: 'iconos/morgana.jpg'},
+    //{id: 'nami', name: 'Nami', image: 'iconos/nami.jpg'},
+    //{id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
+    //{id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
+    //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     {id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
-    {id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
-    {id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
-    {id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
-    {id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
+    //{id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
+    //{id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
+    //{id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
+    //{id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
     {id: 'rammus', name: 'Rammus', image: 'iconos/rammus.jpg'},
     {id: 'renekton', name: 'Renekton', image: 'iconos/renekton.jpg'},
     {id: 'rengar', name: 'Rengar', image: 'iconos/rengar.png'},
-    {id: 'riven', name: 'Riven', image: 'iconos/riven.jpg'},
-    {id: 'samira', name: 'Samira', image: 'iconos/samira.jpg'},
-    {id: 'senna', name: 'Senna', image: 'iconos/senna.jpg'},
-    {id: 'seraphine', name: 'Seraphine', image: 'iconos/seraphine.jpg'},
-    {id: 'sett', name: 'Sett', image: 'iconos/sett.jpg'},
+    //{id: 'riven', name: 'Riven', image: 'iconos/riven.jpg'},
+    //{id: 'samira', name: 'Samira', image: 'iconos/samira.jpg'},
+    //{id: 'senna', name: 'Senna', image: 'iconos/senna.jpg'},
+    //{id: 'seraphine', name: 'Seraphine', image: 'iconos/seraphine.jpg'},
+    //{id: 'sett', name: 'Sett', image: 'iconos/sett.jpg'},
     {id: 'shen', name: 'Shen', image: 'iconos/shen.jpg'},
-    {id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
-    {id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
+    //{id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
+    //{id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
-    {id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
-    {id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
+    //{id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
+    //{id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
     {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     {id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
-    {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
+    //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
-    {id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
+    //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
     {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
-    {id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
+    //{id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
     {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
     {id: 'wukong', name: 'Wukong', image: 'iconos/wukong.jpg'},
-    {id: 'xayah', name: 'Xayah', image: 'iconos/xayah.jpg'},
-    {id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/xinzhao.jpg'},
+    //{id: 'xayah', name: 'Xayah', image: 'iconos/xayah.jpg'},
+    //{id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/xinzhao.jpg'},
     {id: 'yasuo', name: 'Yasuo', image: 'iconos/yasuo.jpg'},
-    {id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
-    {id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
+    //{id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
+    //{id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
     {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
     {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
 ];
