--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ var items = [
     //{id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
     //{id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
-    {id: 'missfortune', name: 'Miss Fortune', image: 'iconos/missfortune.jpg'},
+    //{id: 'missfortune', name: 'Miss Fortune', image: 'iconos/missfortune.jpg'},
     //{id: 'morgana', name: 'Morgana', image: 'iconos/morgana.jpg'},
     //{id: 'nami', name: 'Nami', image: 'iconos/nami.jpg'},
     //{id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
@@ -319,7 +319,7 @@ var items = [
     //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
     //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
-    {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
+    //{id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
     //{id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
     {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
     {id: 'wukong', name: 'Wukong', image: 'iconos/wukong.jpg'},
