--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ var items = [
     {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
     {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     //{id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
-    {id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
+    //{id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
     //{id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
     //{id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
