--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ button.disabled:hover {
 var items = [
     // Define your items here
     
-    /*
+    
     //{id: 'aatrox', name: 'Aatrox', image: 'iconos/aatrox.jpg'},
     //{id: 'lillia', name: 'Lillia', image: 'iconos/lillia.jpg'},
     //{id: 'kayn', name: 'Kayn', image: 'iconos/kayn.jpg'},
@@ -324,15 +324,15 @@ var items = [
     //{id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
     //{id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
     {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
-    {id: 'wukong', name: 'Wukong', image: 'iconos/wukong.jpg'},
+    //{id: 'wukong', name: 'Wukong', image: 'iconos/wukong.jpg'},
     //{id: 'xayah', name: 'Xayah', image: 'iconos/xayah.jpg'},
     //{id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/xinzhao.jpg'},
     {id: 'yasuo', name: 'Yasuo', image: 'iconos/yasuo.jpg'},
     //{id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
     //{id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
     {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
-    {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}*/
-    {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
+    {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
+   /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
     {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
     {id: 'Berrt', name: 'Berrt', image: 'iconos/Berrt.png'},
     {id: 'Black', name: 'Black', image: 'iconos/Black.png'},
@@ -380,7 +380,7 @@ var items = [
     {id: 'Summer', name: 'Summer', image: 'iconos/Summer.jpg'},
     {id: 'Sunshine', name: 'Sunshine', image: 'iconos/Sunshine.jpg'},
     {id: 'White', name: 'White', image: 'iconos/White.png'},
-    {id: 'YumYum', name: 'YumYum', image: 'iconos/YumYum.png'}
+    {id: 'YumYum', name: 'YumYum', image: 'iconos/YumYum.png'}*/
 ];
 
 var myPicker = new picker.Picker({
