--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ var items = [
     //{id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
     //{id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
     {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
-    {id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
+    //{id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
