--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ var items = [
     //{id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
     {id: 'fiora', name: 'Fiora', image: 'iconos/fiora.jpg'},
     {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
-    {id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
+    //{id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
     //{id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
     {id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
     {id: 'graves', name: 'Graves', image: 'iconos/graves.jpg'},
@@ -316,7 +316,7 @@ var items = [
     {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     //{id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
-    {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
+    //{id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
     //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
@@ -331,7 +331,7 @@ var items = [
     //{id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
     //{id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
     {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
-    {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
+    //{id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
    /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
     {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
     {id: 'Berrt', name: 'Berrt', image: 'iconos/Berrt.png'},
