--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ var items = [
     //{id: 'senna', name: 'Senna', image: 'iconos/senna.jpg'},
     //{id: 'seraphine', name: 'Seraphine', image: 'iconos/seraphine.jpg'},
     //{id: 'sett', name: 'Sett', image: 'iconos/sett.jpg'},
-    {id: 'shen', name: 'Shen', image: 'iconos/shen.jpg'},
+    //{id: 'shen', name: 'Shen', image: 'iconos/shen.jpg'},
     //{id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
     //{id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
@@ -318,6 +318,8 @@ var items = [
     {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     //{id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
+    {id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
+    {id: 'urgot', name: 'Urgot', imagen: 'iconos/urgot.jpg'},
     //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
     //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
@@ -331,6 +333,8 @@ var items = [
     //{id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
     //{id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
     {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
+    //{id: 'zeri', name: 'Zeri', imagen: 'iconos/zeri.jpg'},
+    //{id: 'zoe', name: 'Zoe', imagen: 'iconos/zoe.jpg'},
     //{id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
    /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
     {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
