--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ button.disabled:hover {
 <body>
 <h1>Los mejores de la grieta</h1>
 
-<p>You can include any content you want here.</p>
+<p>Elige tus campeones.</p>
 
 <div id="container">
 
