--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ button.disabled:hover {
 <body>
 <h1>Los mejores de la grieta</h1>
 
-<p>Elige tus campeones.</p>
+<p>Elige a tu campeón favorito.</p>
 
 <div id="container">
 
@@ -252,7 +252,7 @@ var items = [
     //{id: 'braum', name: 'Braum', image: 'iconos/braum.jpg'},
     //{id: 'caitlyn', name: 'Caitlyn', image: 'iconos/caitlyn.jpg'},
     {id: 'camille', name: 'Camille', image: 'iconos/camille.jpg'},
-    {id: 'corki', name: 'Corki', image: 'iconos/corki.jpg'},
+    //{id: 'corki', name: 'Corki', image: 'iconos/corki.jpg'},
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
     //{id: 'diana', name: 'Diana', image: 'iconos/diana.jpg'},
     {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
@@ -279,7 +279,7 @@ var items = [
     {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
     {id: 'katarina', name: 'Katarina', image: 'iconos/katarina.jpg'},
     //{id: 'kayle', name: 'Kayle', image: 'iconos/kayle.jpg'},
-    {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
+    //{id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
     {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
     {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     //{id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
@@ -315,10 +315,10 @@ var items = [
     //{id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
     {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     //{id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
-    {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
+    //{id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     //{id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
-    {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
-    {id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
+    //{id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
+    //{id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
     {id: 'urgot', name: 'Urgot', imagen: 'iconos/urgot.jpg'},
     //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
