--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ var items = [
     //{id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
     //{id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
     //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
-    {id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
+    //{id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
     //{id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
     //{id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
     //{id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
