--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ var items = [
     {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
     //{id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
     //{id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
-    {id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
+    //{id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
     {id: 'graves', name: 'Graves', image: 'iconos/graves.jpg'},
     //{id: 'gwen', name: 'Gwen', image: 'iconos/gwen.jpg'},
     //{id: 'irelia', name: 'Irelia', image: 'iconos/irelia.jpg'},
@@ -276,7 +276,7 @@ var items = [
     //{id: 'jinx', name: 'Jinx', image: 'iconos/jinx.jpg'},
     //{id: 'kaisa', name: 'Kai\'sa', image: 'iconos/kaisa.jpg'},
     //{id: 'karma', name: 'Karma', image: 'iconos/karma.jpg'},
-    {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
+    //{id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
     {id: 'katarina', name: 'Katarina', image: 'iconos/katarina.jpg'},
     //{id: 'kayle', name: 'Kayle', image: 'iconos/kayle.jpg'},
     //{id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
@@ -319,7 +319,7 @@ var items = [
     //{id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     //{id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
     //{id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
-    {id: 'urgot', name: 'Urgot', imagen: 'iconos/urgot.jpg'},
+    {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
     //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
     //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
