--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@ var items = [
     //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     //{id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
     //{id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
+    {id: 'orn', name: 'Orn', image: 'iconos/orn.jpg'},
     //{id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
     //{id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
     //{id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
@@ -314,6 +315,7 @@ var items = [
     //{id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
     //{id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
     {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
+    {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
     //{id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     //{id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     //{id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
@@ -325,6 +327,7 @@ var items = [
     //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
     //{id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
     //{id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
+    {id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
     {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
     //{id: 'wukong', name: 'Wukong', image: 'iconos/wukong.jpg'},
     //{id: 'xayah', name: 'Xayah', image: 'iconos/xayah.jpg'},
