--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ button.disabled:hover {
 </div>
 
 <div id="secondary">
-<h2>Found favorites</h2>
+<h2>Tus favos:/h2>
 
 <ol id="favorites" class="item-list">
 </ol>
@@ -296,7 +296,7 @@ var items = [
     //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     //{id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
     //{id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
-    {id: 'orn', name: 'Orn', image: 'iconos/orn.jpg'},
+    {id: 'ornn', name: 'Ornn', image: 'iconos/ornn.jpg'},
     //{id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
     //{id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
     //{id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
