--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ button.disabled:hover {
 </div>
 
 <div id="secondary">
-<h2>Tus favos:/h2>
+<h2>Tus favos:</h2>
 
 <ol id="favorites" class="item-list">
 </ol>
