--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ button.disabled:hover {
 </style>
 </head>
 <body>
-<h1>Los mejores de la grieta</h1>
+<h1>Tus waifus y husbandos</h1>
 
 <p>Elige a tu campeón favorito.</p>
 
@@ -261,7 +261,7 @@ var items = [
     //{id: 'evelynn', name: 'Evelynn', image: 'iconos/evelynn.jpg'},
     //{id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
     {id: 'fiora', name: 'Fiora', image: 'iconos/fiora.jpg'},
-    {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
+    //{id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
     //{id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
     //{id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
     //{id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
@@ -296,7 +296,7 @@ var items = [
     //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     //{id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
     //{id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
-    {id: 'ornn', name: 'Ornn', image: 'iconos/ornn.jpg'},
+    //{id: 'ornn', name: 'Ornn', image: 'iconos/ornn.jpg'},
     //{id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
     //{id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
     //{id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
@@ -314,7 +314,7 @@ var items = [
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
     //{id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
     //{id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
-    {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
+    //{id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
     //{id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     //{id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
