--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ var items = [
     {id: 'nami', name: 'Nami', image: 'iconos/nami.jpg'},
     //{id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
     //{id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
-    {id: 'nilah', name:'Nilah', image: 'iconos/nilah.jpg'},
+    {id: 'nilah', name:'Nilah', image: 'iconos/nilah-classic.png'},
     //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     //{id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
     {id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
