--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ var items = [
     //{id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
    //{id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
     {id: 'zeri', name: 'Zeri', imagen: 'iconos/zeri.jpg'},
-    {id: 'zoe', name: 'Zoe', imagen: 'iconos/zoe.jpg'},
+    {id: 'zoe', name: 'Zoe', imagen: 'iconos/zoe.jpg'}
     //{id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
    /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
     {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
