--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ var items = [
     {id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
     {id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     //{id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
-    /{id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
+    //{id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
     {id: 'missfortune', name: 'Miss Fortune', image: 'iconos/missfortune.jpg'},
     {id: 'morgana', name: 'Morgana', image: 'iconos/morgana.jpg'},
     {id: 'nami', name: 'Nami', image: 'iconos/nami.jpg'},
