--- a/index.html
+++ b/index.html
@@ -210,8 +210,15 @@ button.disabled:hover {
 <p>
 <a href="wrall.html">Wild all Champions</a>
 </p>
-
-
+<p>
+<a href="wildgirls.html">Waifus</a>
+</p>
+<p>
+<a href="wildboys.html">Hasbandos</a>
+</p>
+    <p>
+<a href="faltantes.html">No en posesión</a>
+    </p>
 
 
 </div>
