--- a/wrall.html
+++ b/wrall.html
@@ -321,7 +321,7 @@ var items = [
     {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
-    {id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
+    {id: 'twitch', name: 'Twitch', image: 'iconos/twitch.jpg'},
     {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
     {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
@@ -393,7 +393,7 @@ var items = [
 
 var myPicker = new picker.Picker({
     items: items,
-    localStorageKey: 'wr-picker-state'
+    localStorageKey: 'wr-all-picker-state'
 });
 
 var pickerUI = new PickerUI(myPicker, {
