--- a/wildgirls.html
+++ b/wildgirls.html
@@ -393,7 +393,7 @@ var items = [
 
 var myPicker = new picker.Picker({
     items: items,
-    localStorageKey: 'wr-picker-state'
+    localStorageKey: 'wr-girls-picker-state'
 });
 
 var pickerUI = new PickerUI(myPicker, {
