--- a/faltantes.html
+++ b/faltantes.html
@@ -206,7 +206,7 @@ button.disabled:hover {
 </style>
 </head>
 <body>
-<h1>Tus waifus</h1>
+<h1>¿Cuál quieres?</h1>
 
 <p>Elige a tu campeón favorito.</p>
 
@@ -393,7 +393,7 @@ var items = [
 
 var myPicker = new picker.Picker({
     items: items,
-    localStorageKey: 'wr-picker-state'
+    localStorageKey: 'wr-rest-picker-state'
 });
 
 var pickerUI = new PickerUI(myPicker, {
