--- a/wildboys.html
+++ b/wildboys.html
@@ -220,7 +220,7 @@ button.disabled:hover {
 </div>
 
 <div id="secondary">
-<h2>Tus waifus:</h2>
+<h2>Tus daddies</h2>
 
 <ol id="favorites" class="item-list">
 </ol>
@@ -294,7 +294,7 @@ var items = [
   // {id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
  //  {id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
   // {id: 'nilah', name:'Nilah', image: 'iconos/nilah-classic.png'},
-    {id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
+    //{id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
     {id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
 //   {id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
  //  {id: 'ornn', name: 'Ornn', image: 'iconos/ornn.jpg'},
@@ -310,7 +310,7 @@ var items = [
   // {id: 'seraphine', name: 'Seraphine', image: 'iconos/seraphine.jpg'},
     {id: 'sett', name: 'Sett', image: 'iconos/sett.jpg'},
     {id: 'shen', name: 'Shen', image: 'iconos/shen.jpg'},
-    {id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
+    //{id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
  //  {id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
   // {id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
