--- a/wildgirls.html
+++ b/wildgirls.html
@@ -244,7 +244,7 @@ var items = [
    //{id: 'akshan', name: 'Akshan', image: 'iconos/akshan.jpg'},
     //{id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
     //{id: 'amumu', name: 'Amumu', image: 'iconos/amumu.jpg'},
-    {id: 'annie', name: 'Annie', image: 'iconos/annie.jpg'},
+   // {id: 'annie', name: 'Annie', image: 'iconos/annie.jpg'},
     {id: 'ashe', name: 'Ashe', image: 'iconos/ashe.jpg'},
    // {id: 'aurelion_sol', name: 'Aurelion Sol', image: 'iconos/aurelion_sol.jpg'},
     //{id: 'blitzcrank', name: 'Blitzcrank', image: 'iconos/blitzcrank.jpg'},
@@ -284,7 +284,7 @@ var items = [
    //{id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     {id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
     //{id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
-    {id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
+  //  {id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
     {id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     //{id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
     //{id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
@@ -318,7 +318,7 @@ var items = [
     //{id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     //{id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
     //{id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
-    {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
+  // {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     //{id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     //{id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
     //{id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
@@ -326,7 +326,7 @@ var items = [
     //{id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
     //{id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
-    {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
+//   {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
     {id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
     //{id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
    //{id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
@@ -338,7 +338,7 @@ var items = [
     //{id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
    //{id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
     {id: 'zeri', name: 'Zeri', image: 'iconos/zeri.jpg'},
-    {id: 'zoe', name: 'Zoe', image: 'iconos/zoe.jpg'}
+  // {id: 'zoe', name: 'Zoe', image: 'iconos/zoe.jpg'}
     //{id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
    /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
     {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
