--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ button.disabled:hover {
 </style>
 </head>
 <body>
-<h1>Opciones:/h1>
+<h1>Opciones:</h1>
 <p>
 <a href="wrall.html">Wild all Champions</a>
 </p>
@@ -218,6 +218,8 @@ button.disabled:hover {
 </p>
     <p>
 <a href="faltantes.html">No en posesión</a>
+    </p><p>
+<a href="precure.html">Pretty Cure</a>
     </p>
 
 
