--- a/precure.html
+++ b/precure.html
@@ -345,6 +345,7 @@ var items = [
     {id: 'Berrt', name: 'Berrt', image: 'iconos/Berrt.png'},
     {id: 'Black', name: 'Black', image: 'iconos/Black.png'},
     {id: 'Blossom', name: 'Blossom', image: 'iconos/Blossom.png'},
+    {id: 'Butterfly', name: 'Butterfly', image: 'iconos/butterfly.png'},
     {id: 'Coral', name: 'Coral', image: 'iconos/Coral.jpg'},
     {id: 'Dream', name: 'Dream', image: 'iconos/Dream.png'},
     {id: 'Earth', name: 'Earth', image: 'iconos/Earth.jpg'},
@@ -375,25 +376,28 @@ var items = [
     {id: 'Passion', name: 'Passion', image: 'iconos/Passion.png'},
     {id: 'Peach', name: 'Peach', image: 'iconos/Peach.png'},
     {id: 'Pine', name: 'Pine', image: 'iconos/Pine.png'},
-    {id: 'Precious', name: 'Precious', image: 'iconos/Precious.png'},
+    {id: 'Precious', name: 'Precious', image: 'iconos/precious.png'},
     {id: 'Princess', name: 'Princess', image: 'iconos/Princess.png'},
+    {id: 'Prism', name: 'Prism', image: 'iconos/prism.png'},
     {id: 'Rose', name: 'Rose', image: 'iconos/Rose.png'},
     {id: 'Rouge', name: 'Rouge', image: 'iconos/Rouge.png'},
     {id: 'Rythm', name: 'Rythm', image: 'iconos/Rythm.png'},
     {id: 'Sekene', name: 'Sekene', image: 'iconos/Sekene.png'},
+    {id: 'Sky', name: 'Sky', image: 'iconos/sky.png'},
     {id: 'Soleil', name: 'Soleil', image: 'iconos/Soleil.png'},
     {id: 'Sparkle', name: 'Sparkle', image: 'iconos/Sparkle.jpg'},
-    {id: 'Spicy', name: 'Spicy', image: 'iconos/Spicy.png'},
+    {id: 'Spicy', name: 'Spicy', image: 'iconos/spicy.png'},
     {id: 'Star', name: 'Star', image: 'iconos/Star.png'},
     {id: 'Summer', name: 'Summer', image: 'iconos/Summer.jpg'},
     {id: 'Sunshine', name: 'Sunshine', image: 'iconos/Sunshine.jpg'},
     {id: 'White', name: 'White', image: 'iconos/White.png'},
-    {id: 'YumYum', name: 'YumYum', image: 'iconos/YumYum.png'}
+    {id: 'Wing', name: 'Wing', image: 'iconos/wing.png'},
+    {id: 'YumYum', name: 'YumYum', image: 'iconos/yumyum.png'}
 ];
 
 var myPicker = new picker.Picker({
     items: items,
-    localStorageKey: 'wr-rest-picker-state'
+    localStorageKey: 'precure-picker-state'
 });
 
 var pickerUI = new PickerUI(myPicker, {
