--- a/faltantes.html
+++ b/faltantes.html
@@ -220,7 +220,7 @@ button.disabled:hover {
 </div>
 
 <div id="secondary">
-<h2>Tus waifus:</h2>
+<h2>Tus favos:</h2>
 
 <ol id="favorites" class="item-list">
 </ol>
@@ -235,160 +235,27 @@ button.disabled:hover {
 
 var items = [
     // Define your items here
-    
-    
-  //  {id: 'aatrox', name: 'Aatrox', image: 'iconos/aatrox.jpg'},
-   // {id: 'lillia', name: 'Lillia', image: 'iconos/lillia.jpg'},
- //  {id: 'kayn', name: 'Kayn', image: 'iconos/kayn.jpg'},
- //  {id: 'akali', name: 'Akali', image: 'iconos/akali.jpg'},
-//  {id: 'akshan', name: 'Akshan', image: 'iconos/akshan.jpg'},
+
     {id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
- //  {id: 'amumu', name: 'Amumu', image: 'iconos/amumu.jpg'},
- //  {id: 'annie', name: 'Annie', image: 'iconos/annie.jpg'},
-//   {id: 'ashe', name: 'Ashe', image: 'iconos/ashe.jpg'},
     {id: 'aurelion_sol', name: 'Aurelion Sol', image: 'iconos/aurelion_sol.jpg'},
-//   {id: 'blitzcrank', name: 'Blitzcrank', image: 'iconos/blitzcrank.jpg'},
     {id: 'brand', name: 'Brand', image: 'iconos/brand.jpg'},
-   // {id: 'braum', name: 'Braum', image: 'iconos/braum.jpg'},
- //  {id: 'caitlyn', name: 'Caitlyn', image: 'iconos/caitlyn.jpg'},
     {id: 'camille', name: 'Camille', image: 'iconos/camille.jpg'},
- //  {id: 'corki', name: 'Corki', image: 'iconos/corki.jpg'},
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
- //  {id: 'diana', name: 'Diana', image: 'iconos/diana.jpg'},
     {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
     {id: 'draven', name: 'Draven', image: 'iconos/draven.jpg'},
- //  {id: 'ekko', name: 'Ekko', image: 'iconos/ekko.jpg'},
- //  {id: 'evelynn', name: 'Evelynn', image: 'iconos/evelynn.jpg'},
- //  {id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
-  {id: 'fiora', name: 'Fiora', image: 'iconos/fiora.jpg'},
- //  {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
- //  {id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
-  // {id: 'garen', name: 'Garen', image: 'iconos/garen.jpg'},
- //  {id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
-    {id: 'graves', name: 'Graves', image: 'iconos/graves.jpg'},
-   //{id: 'gwen', name: 'Gwen', image: 'iconos/gwen.jpg'},
- //  {id: 'irelia', name: 'Irelia', image: 'iconos/irelia.jpg'},
- //  {id: 'janna', name: 'Janna', image: 'iconos/janna.jpg'},
- //  {id: 'jarvaniv', name: 'Jarvan IV', image: 'iconos/jarvaniv.jpg'},
- //  {id: 'jax', name: 'Jax', image: 'iconos/jax.jpg'},
-  // {id: 'jayce', name: 'Jayce', image: 'iconos/jayce.jpg'},
- //  {id: 'jhin', name: 'Jhin', image: 'iconos/jhin.jpg'},
-  // {id: 'jinx', name: 'Jinx', image: 'iconos/jinx.jpg'},
-  // {id: 'kaisa', name: 'Kai\'sa', image: 'iconos/kaisa.jpg'},
-//   {id: 'karma', name: 'Karma', image: 'iconos/karma.jpg'},
- //  {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
- //  {id: 'katarina', name: 'Katarina', image: 'iconos/katarina.jpg'},
-  // {id: 'kayle', name: 'Kayle', image: 'iconos/kayle.jpg'},
-//   {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
+    {id: 'fiora', name: 'Fiora', image: 'iconos/fiora.jpg'},
    {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
    {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
-   //{id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
-//    {id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
-  // {id: 'lulu', name: 'Lulu', image: 'iconos/lulu.jpg'},
- //  {id: 'lux', name: 'Lux', image: 'iconos/lux.jpg'},
     {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
-//    {id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
- //  {id: 'missfortune', name: 'Miss Fortune', image: 'iconos/missfortune.jpg'},
-  // {id: 'morgana', name: 'Morgana', image: 'iconos/morgana.jpg'},
- //  {id: 'nami', name: 'Nami', image: 'iconos/nami.jpg'},
-  // {id: 'nasus', name: 'Nasus', image: 'iconos/nasus.jpg'},
- //  {id: 'nautilus', name: 'Nautilus', image: 'iconos/nautilus.jpg'},
- //  {id: 'nilah', name:'Nilah', image: 'iconos/nilah-classic.png'},
- //  {id: 'nunu', name: 'Nunu & Willump', image: 'iconos/nunu.jpg'},
- //  {id: 'olaf', name: 'Olaf', image: 'iconos/olaf.jpg'},
- //  {id: 'orianna', name: 'Orianna', image: 'iconos/orianna.jpg'},
- //  {id: 'ornn', name: 'Ornn', image: 'iconos/ornn.jpg'},
-//   {id: 'pantheon', name: 'Pantheon', image: 'iconos/pantheon.jpg'},
-//   {id: 'pyke', name: 'Pyke', image: 'iconos/pyke.jpg'},
-  // {id: 'rakan', name: 'Rakan', image: 'iconos/rakan.jpg'},
-    //{id: 'rammus', name: 'Rammus', image: 'iconos/rammus.jpg'},
    {id: 'renekton', name: 'Renekton', image: 'iconos/renekton.jpg'},
    {id: 'rengar', name: 'Rengar', image: 'iconos/rengar.png'},
-//   {id: 'riven', name: 'Riven', image: 'iconos/riven.jpg'},
-//    {id: 'samira', name: 'Samira', image: 'iconos/samira.jpg'},
-//    {id: 'senna', name: 'Senna', image: 'iconos/senna.jpg'},
-//   {id: 'seraphine', name: 'Seraphine', image: 'iconos/seraphine.jpg'},
- //  {id: 'sett', name: 'Sett', image: 'iconos/sett.jpg'},
-  // {id: 'shen', name: 'Shen', image: 'iconos/shen.jpg'},
- //  {id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
-  // {id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
-//    {id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
- //  {id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
- //  {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
- //  {id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
- //  {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
- //   {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
-//   {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
-//   {id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
     {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
-//    {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
-//    {id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
- //  {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
- //  {id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
   {id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
    {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
- //  {id: 'wukong', name: 'Wukong', image: 'iconos/wukong.jpg'},
-//   {id: 'xayah', name: 'Xayah', image: 'iconos/xayah.jpg'},
- //  {id: 'xinzhao', name: 'Xin Zhao', image: 'iconos/xinzhao.jpg'},
-//   {id: 'yasuo', name: 'Yasuo', image: 'iconos/yasuo.jpg'},
-  // {id: 'yone', name: 'Yone', image: 'iconos/yone.jpg'},
-//   {id: 'yuumi', name: 'Yuumi', image: 'iconos/yuumi.jpg'},
    {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'}
-//   {id: 'zeri', name: 'Zeri', image: 'iconos/zeri.jpg'},
- //  {id: 'zoe', name: 'Zoe', image: 'iconos/zoe.jpg'},
- //  {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
-   /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
-    {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
-    {id: 'Berrt', name: 'Berrt', image: 'iconos/Berrt.png'},
-    {id: 'Black', name: 'Black', image: 'iconos/Black.png'},
-    {id: 'Blossom', name: 'Blossom', image: 'iconos/Blossom.png'},
-    {id: 'Coral', name: 'Coral', image: 'iconos/Coral.jpg'},
-    {id: 'Dream', name: 'Dream', image: 'iconos/Dream.png'},
-    {id: 'Earth', name: 'Earth', image: 'iconos/Earth.jpg'},
-    {id: 'Felice', name: 'Felice', image: 'iconos/Felice.png'},
-    {id: 'Finale', name: 'Finale', image: 'iconos/Finale.png'},
-    {id: 'Flamingo', name: 'Flamingo', image: 'iconos/Flamingo.jpg'},
-    {id: 'Flower', name: 'Flower', image: 'iconos/Flower.png'},
-    {id: 'Fountain', name: 'Fountain', image: 'iconos/Fountain.jpg'},
-    {id: 'Grace', name: 'Grace', image: 'iconos/Grace.jpg'},
-    {id: 'KomeKome', name: 'KomeKome', image: 'iconos/KomeKome.png'},
-    {id: 'Kururun', name: 'Kururun', image: 'iconos/Kururun.png'},
-    {id: 'Lamer', name: 'Lamer', image: 'iconos/Lamer.jpg'},
-    {id: 'Lemonade', name: 'Lemonade', image: 'iconos/Lemonade.png'},
-    {id: 'Lovely', name: 'Lovely', image: 'iconos/Lovely.png'},
-    {id: 'Magical', name: 'Magical', image: 'iconos/Magical.png'},
-    {id: 'Marine', name: 'Marine', image: 'iconos/Marine.png'},
-    {id: 'Melody', name: 'Melody', image: 'iconos/Melody.png'},
-    {id: 'MemMem', name: 'MemMem', image: 'iconos/MemMem.png'},
-    {id: 'Milky', name: 'Milky', image: 'iconos/Milky.png'},
-    {id: 'Mint', name: 'Mint', image: 'iconos/Mint.png'},
-    {id: 'Miracle', name: 'Miracle', image: 'iconos/Miracle.jpg'},
-    {id: 'Mofurun', name: 'Mofurun', image: 'iconos/Mofurun.png'},
-    {id: 'Moonlight', name: 'Moonlight', image: 'iconos/Moonlight.png'},
-    {id: 'Muse', name: 'Muse', image: 'iconos/Muse.png'},
-    {id: 'Oasis', name: 'Oasis', image: 'iconos/Oasis.png'},
-    {id: 'PamPam', name: 'PamPam', image: 'iconos/PamPam.png'},
-    {id: 'Papaya', name: 'Papaya', image: 'iconos/Papaya.jpg'},
-    {id: 'Passion', name: 'Passion', image: 'iconos/Passion.png'},
-    {id: 'Peach', name: 'Peach', image: 'iconos/Peach.png'},
-    {id: 'Pine', name: 'Pine', image: 'iconos/Pine.png'},
-    {id: 'Precious', name: 'Precious', image: 'iconos/Precious.png'},
-    {id: 'Princess', name: 'Princess', image: 'iconos/Princess.png'},
-    {id: 'Rose', name: 'Rose', image: 'iconos/Rose.png'},
-    {id: 'Rouge', name: 'Rouge', image: 'iconos/Rouge.png'},
-    {id: 'Rythm', name: 'Rythm', image: 'iconos/Rythm.png'},
-    {id: 'Sekene', name: 'Sekene', image: 'iconos/Sekene.png'},
-    {id: 'Soleil', name: 'Soleil', image: 'iconos/Soleil.png'},
-    {id: 'Sparkle', name: 'Sparkle', image: 'iconos/Sparkle.jpg'},
-    {id: 'Spicy', name: 'Spicy', image: 'iconos/Spicy.png'},
-    {id: 'Star', name: 'Star', image: 'iconos/Star.png'},
-    {id: 'Summer', name: 'Summer', image: 'iconos/Summer.jpg'},
-    {id: 'Sunshine', name: 'Sunshine', image: 'iconos/Sunshine.jpg'},
-    {id: 'White', name: 'White', image: 'iconos/White.png'},
-    {id: 'YumYum', name: 'YumYum', image: 'iconos/YumYum.png'}*/
 ];
 
 var myPicker = new picker.Picker({
