--- a/wrall.html
+++ b/wrall.html
@@ -326,6 +326,7 @@ var items = [
     {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
     {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
     {id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
+  {id: 'vladimir', name: 'Vladimir', image: 'iconos/vladimir.jpg'},
     {id: 'vex', name: 'Vex', image: 'iconos/vex.jpg'},
     {id: 'vi', name: 'Vi', image: 'iconos/vi.jpg'},
   {id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
@@ -340,55 +341,7 @@ var items = [
     {id: 'zeri', name: 'Zeri', image: 'iconos/zeri.jpg'},
     {id: 'zoe', name: 'Zoe', image: 'iconos/zoe.jpg'},
     {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
-   /* {id: 'Aqua', name: 'Aqua', image: 'iconos/Aqua.png'},
-    {id: 'Beat', name: 'Beat', image: 'iconos/Beat.png'},
-    {id: 'Berrt', name: 'Berrt', image: 'iconos/Berrt.png'},
-    {id: 'Black', name: 'Black', image: 'iconos/Black.png'},
-    {id: 'Blossom', name: 'Blossom', image: 'iconos/Blossom.png'},
-    {id: 'Coral', name: 'Coral', image: 'iconos/Coral.jpg'},
-    {id: 'Dream', name: 'Dream', image: 'iconos/Dream.png'},
-    {id: 'Earth', name: 'Earth', image: 'iconos/Earth.jpg'},
-    {id: 'Felice', name: 'Felice', image: 'iconos/Felice.png'},
-    {id: 'Finale', name: 'Finale', image: 'iconos/Finale.png'},
-    {id: 'Flamingo', name: 'Flamingo', image: 'iconos/Flamingo.jpg'},
-    {id: 'Flower', name: 'Flower', image: 'iconos/Flower.png'},
-    {id: 'Fountain', name: 'Fountain', image: 'iconos/Fountain.jpg'},
-    {id: 'Grace', name: 'Grace', image: 'iconos/Grace.jpg'},
-    {id: 'KomeKome', name: 'KomeKome', image: 'iconos/KomeKome.png'},
-    {id: 'Kururun', name: 'Kururun', image: 'iconos/Kururun.png'},
-    {id: 'Lamer', name: 'Lamer', image: 'iconos/Lamer.jpg'},
-    {id: 'Lemonade', name: 'Lemonade', image: 'iconos/Lemonade.png'},
-    {id: 'Lovely', name: 'Lovely', image: 'iconos/Lovely.png'},
-    {id: 'Magical', name: 'Magical', image: 'iconos/Magical.png'},
-    {id: 'Marine', name: 'Marine', image: 'iconos/Marine.png'},
-    {id: 'Melody', name: 'Melody', image: 'iconos/Melody.png'},
-    {id: 'MemMem', name: 'MemMem', image: 'iconos/MemMem.png'},
-    {id: 'Milky', name: 'Milky', image: 'iconos/Milky.png'},
-    {id: 'Mint', name: 'Mint', image: 'iconos/Mint.png'},
-    {id: 'Miracle', name: 'Miracle', image: 'iconos/Miracle.jpg'},
-    {id: 'Mofurun', name: 'Mofurun', image: 'iconos/Mofurun.png'},
-    {id: 'Moonlight', name: 'Moonlight', image: 'iconos/Moonlight.png'},
-    {id: 'Muse', name: 'Muse', image: 'iconos/Muse.png'},
-    {id: 'Oasis', name: 'Oasis', image: 'iconos/Oasis.png'},
-    {id: 'PamPam', name: 'PamPam', image: 'iconos/PamPam.png'},
-    {id: 'Papaya', name: 'Papaya', image: 'iconos/Papaya.jpg'},
-    {id: 'Passion', name: 'Passion', image: 'iconos/Passion.png'},
-    {id: 'Peach', name: 'Peach', image: 'iconos/Peach.png'},
-    {id: 'Pine', name: 'Pine', image: 'iconos/Pine.png'},
-    {id: 'Precious', name: 'Precious', image: 'iconos/Precious.png'},
-    {id: 'Princess', name: 'Princess', image: 'iconos/Princess.png'},
-    {id: 'Rose', name: 'Rose', image: 'iconos/Rose.png'},
-    {id: 'Rouge', name: 'Rouge', image: 'iconos/Rouge.png'},
-    {id: 'Rythm', name: 'Rythm', image: 'iconos/Rythm.png'},
-    {id: 'Sekene', name: 'Sekene', image: 'iconos/Sekene.png'},
-    {id: 'Soleil', name: 'Soleil', image: 'iconos/Soleil.png'},
-    {id: 'Sparkle', name: 'Sparkle', image: 'iconos/Sparkle.jpg'},
-    {id: 'Spicy', name: 'Spicy', image: 'iconos/Spicy.png'},
-    {id: 'Star', name: 'Star', image: 'iconos/Star.png'},
-    {id: 'Summer', name: 'Summer', image: 'iconos/Summer.jpg'},
-    {id: 'Sunshine', name: 'Sunshine', image: 'iconos/Sunshine.jpg'},
-    {id: 'White', name: 'White', image: 'iconos/White.png'},
-    {id: 'YumYum', name: 'YumYum', image: 'iconos/YumYum.png'}*/
+
 ];
 
 var myPicker = new picker.Picker({
