--- a/wildboys.html
+++ b/wildboys.html
@@ -264,7 +264,7 @@ var items = [
  {id: 'kassadin', name: 'Kassadin', image: 'iconos/kassadin.jpg'},
    {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
  // {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
-   {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},p
+   {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     {id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
   // {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
     {id: 'masteryi', name: 'Master Yi', image: 'iconos/masteryi.jpg'},
