--- a/wildboys.html
+++ b/wildboys.html
@@ -288,7 +288,7 @@ var items = [
     {id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
     {id: 'twistedfate', name: 'Twisted Fate', image: 'iconos/twistedfate.jpg'},
-  {id: 'twitch', name: 'Twitch', imagen: 'iconos/twitch.jpg'},
+  {id: 'twitch', name: 'Twitch', image: 'iconos/twitch.jpg'},
     {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
     {id: 'varus', name: 'Varus', image: 'iconos/varus.jpg'},
   {id: 'veigar', name: 'Veigar', image: 'iconos/veigar.jpg'},
