--- a/faltantes.html
+++ b/faltantes.html
@@ -208,7 +208,7 @@ button.disabled:hover {
 <body>
 <h1>¿Cuál quieres?</h1>
 
-<p>Elige a tu campeón favorito.</p>
+<p>¡Elige a tu campeón favorito!</p>
 
 <div id="container">
 
@@ -239,19 +239,16 @@ var items = [
     {id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
     {id: 'aurelion_sol', name: 'Aurelion Sol', image: 'iconos/aurelion_sol.jpg'},
     {id: 'brand', name: 'Brand', image: 'iconos/brand.jpg'},
-    {id: 'camille', name: 'Camille', image: 'iconos/camille.jpg'},
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
     {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
     {id: 'draven', name: 'Draven', image: 'iconos/draven.jpg'},
    {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
-   {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
    {id: 'renekton', name: 'Renekton', image: 'iconos/renekton.jpg'},
    {id: 'rengar', name: 'Rengar', image: 'iconos/rengar.png'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
     {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
     {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
-    {id: 'vayne', name: 'Vayne', image: 'iconos/vayne.jpg'},
   {id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
    {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
    {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'}
