--- a/faltantes.html
+++ b/faltantes.html
@@ -208,7 +208,7 @@ button.disabled:hover {
 <body>
 <h1>¿Cuál quieres?</h1>
 
-<p>¡Elige a tu campeón favorito!</p>
+<p>¡Elige a tu campeón favorito Afrodito!</p>
 
 <div id="container">
 
@@ -242,15 +242,11 @@ var items = [
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
     {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
     {id: 'draven', name: 'Draven', image: 'iconos/draven.jpg'},
-    {id: 'malphite', name: 'Malphite', image: 'iconos/malphite.jpg'},
    {id: 'renekton', name: 'Renekton', image: 'iconos/renekton.jpg'},
-   {id: 'rengar', name: 'Rengar', image: 'iconos/rengar.png'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
-    {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
     {id: 'urgot', name: 'Urgot', image: 'iconos/urgot.jpg'},
   {id: 'volibear', name: 'Volibear', image: 'iconos/volibear.jpg'},
-   {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'},
-   {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'}
+   {id: 'warwick', name: 'Warwick', image: 'iconos/warwick.jpg'}
 ];
 
 var myPicker = new picker.Picker({
