--- a/faltantes.html
+++ b/faltantes.html
@@ -208,7 +208,7 @@ button.disabled:hover {
 <body>
 <h1>¿Cuál quieres?</h1>
 
-<p>¡Elige a tu campeón favorito Afrodito!</p>
+<p>¡Elige a tu campeón afrodito!</p>
 
 <div id="container">
 
@@ -238,7 +238,6 @@ var items = [
 
     {id: 'alistar', name: 'Alistar', image: 'iconos/alistar.jpg'},
     {id: 'aurelion_sol', name: 'Aurelion Sol', image: 'iconos/aurelion_sol.jpg'},
-    {id: 'brand', name: 'Brand', image: 'iconos/brand.jpg'},
     {id: 'darius', name: 'Darius', image: 'iconos/darius.jpg'},
     {id: 'drmundo', name: 'Dr. Mundo', image: 'iconos/drmundo.jpg'},
     {id: 'draven', name: 'Draven', image: 'iconos/draven.jpg'},
