--- a/wrall.html
+++ b/wrall.html
@@ -260,6 +260,7 @@ var items = [
     {id: 'ekko', name: 'Ekko', image: 'iconos/ekko.jpg'},
     {id: 'evelynn', name: 'Evelynn', image: 'iconos/evelynn.jpg'},
     {id: 'ezreal', name: 'Ezreal', image: 'iconos/ezreal.jpg'},
+    {id: 'fiddlesticks', name: 'Fiddlesticks', image: 'iconos/fiddlesticks.jpg'},
   {id: 'fiora', name: 'Fiora', image: 'iconos/fiora.jpg'},
     {id: 'fizz', name: 'Fizz', image: 'iconos/fizz.jpg'},
     {id: 'galio', name: 'Galio', image: 'iconos/galio.jpg'},
@@ -267,6 +268,7 @@ var items = [
     {id: 'gragas', name: 'Gragas', image: 'iconos/gragas.jpg'},
     {id: 'graves', name: 'Graves', image: 'iconos/graves.jpg'},
     {id: 'gwen', name: 'Gwen', image: 'iconos/gwen.jpg'},
+    {id: 'hecarim ', name: 'Hecarim', image: 'iconos/hecarim.jpg'},
     {id: 'irelia', name: 'Irelia', image: 'iconos/irelia.jpg'},
     {id: 'janna', name: 'Janna', image: 'iconos/janna.jpg'},
     {id: 'jarvaniv', name: 'Jarvan IV', image: 'iconos/jarvaniv.jpg'},
@@ -281,6 +283,7 @@ var items = [
     {id: 'kayle', name: 'Kayle', image: 'iconos/kayle.jpg'},
     {id: 'kennen', name: 'Kennen', image: 'iconos/kennen.jpg'},
    {id: 'khazix', name: 'Kha\'Zix', image: 'iconos/khazix.png'},
+   {id: 'kindred', name: 'Kindred', image: 'iconos/kindred.jpg'},
    {id: 'leesin', name: 'Lee Sin', image: 'iconos/leesin.jpg'},
     {id: 'leona', name: 'Leona', image: 'iconos/leona.jpg'},
     {id: 'lucian', name: 'Lucian', image: 'iconos/lucian.jpg'},
@@ -313,10 +316,13 @@ var items = [
     {id: 'shyvana', name: 'Shyvana', image: 'iconos/shyvana.jpg'},
     {id: 'sion', name: 'Sion', image: 'iconos/sion.jpg'},
     {id: 'singed', name: 'Singed', image: 'iconos/singed.jpg'},
+    {id: 'sivir', name: 'Sivir', image: 'iconos/sivir.jpg'},
     {id: 'sona', name: 'Sona', image: 'iconos/sona.jpg'},
     {id: 'soraka', name: 'Soraka', image: 'iconos/soraka.jpg'},
     {id: 'teemo', name: 'Teemo', image: 'iconos/teemo.jpg'},
     {id: 'swain', name: 'Swain', image: 'iconos/swain.jpg'},
+    {id: 'syndra', name: 'Syndra', image: 'iconos/syndra.jpg'},
+    {id: 'talon', name: 'Talon', image: 'iconos/talon.jpg'},
     {id: 'thresh', name: 'Thresh', image: 'iconos/thresh.jpg'},
     {id: 'tristana', name: 'Tristana', image: 'iconos/tristana.jpg'},
     {id: 'tryndamere', name: 'Tryndamere', image: 'iconos/tryndamere.jpg'},
@@ -340,7 +346,8 @@ var items = [
    {id: 'zed', name: 'Zed', image: 'iconos/zed.jpg'},
     {id: 'zeri', name: 'Zeri', image: 'iconos/zeri.jpg'},
     {id: 'zoe', name: 'Zoe', image: 'iconos/zoe.jpg'},
-    {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'}
+    {id: 'ziggs', name: 'Ziggs', image: 'iconos/ziggs.jpg'},
+    {id: 'zyra', name: 'Zyra', image: 'iconos/zyra.jpg'}
 
 ];
 
